--- a/NetflixGPT/package.json
+++ b/NetflixGPT/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@tailwindcss/vite": "^4.1.11",
     "firebase": "^12.1.0",
     "lucide-react": "^0.540.0",
+    "openai": "^5.16.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
